--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "nestjs-typeorm-paginate",
-  "author": {
-    "name": "Ashleigh Simonelli",
-    "email": "ashleighsimonelli@gmail.com",
-    "url": "http://ashleighsimonelli.co.uk"
-  },
+  "name": "@appotter/nestjs-typeorm-paginate",
+  "author": "Ashleigh Simonelli <ashleighsimonelli@gmail.com>, Phitsanu Chuamuangphan <ap.phitsanu@gmail.com, contact@phitsanu.ch>",
   "main": "./dist/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nestjsx/nestjs-typeorm-paginate"
+    "url": "git+https://github.com/appotter/nestjs-typeorm-paginate.git"
   },
   "description": "A simple pagination function to build a pagination object with types",
   "keywords": [
@@ -18,10 +14,10 @@
     "paginate"
   ],
   "devDependencies": {
-    "@nestjs/common": "^7.5.5",
-    "@nestjs/core": "^7.5.5",
-    "@nestjs/testing": "^7.0.0",
-    "@nestjs/typeorm": "^7.1.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.0",
     "@types/jest": "^27.0.0",
     "@types/node": "^17.0.22",
     "coveralls": "^3.0.5",
@@ -29,7 +25,7 @@
     "mysql": "^2.17.1",
     "prettier": "^2.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2",
+    "rxjs": "^7.1.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^10.0.0",
     "typeorm": "0.3.6",
